# Open-GL-Project

./: CMakeLists.txt  Camera.cpp  Camera.hpp  README.md  main.cpp
objects/Chopper/: chopper.mtl
objects/Low_fish/: shark.mtl
objects/Luffy/: luff.mtl
objects/buoy/: untitled.mtl
objects/fish/: 02_02_position2.mtl
objects/ground/: LAKE.mtl
objects/nanosuit/: LICENSE.txt  nanosuit.mtl
objects/pirates/skeleteon/: skeleton.mtl
objects/ship/: Ship_01B_Close_Sails.mtl  ship.mtl
objects/ship/ghostShip/: ghostShip.mtl
objects/under_ocean/: untitled.mtl
objects/valley/: untitled.mtl
shaders/: basicWave.frag  basicWave.vert  depthMapShader.frag  depthMapShader.vert  shaderStart.frag  shaderStart.vert
x64/Debug/: Lab9.exe.recipe  main.obj.enc
